2001-10-14  Ross Golder  <ross@golder.org>

	* gconf.spec.in: updated installation paths

2001-10-14  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version, increment GCONF_CURRENT
	and GCONF_AGE due to API additions

2001-10-13  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: allow for db3 headers/includes installed in a
	strange location.
	* backends/Makefile.am: add BDB_CFLAGS to INCLUDES.
	
2001-10-12  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* gconf/gconf.c (gconf_engine_set): check UTF-8 validity here,
	instead of at the higher levels	

	* gconf/gconf-value.c (gconf_value_validate): new internal function

2001-10-12  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* tests/testschemas.c (check_schema_storage): add some UTF-8

	* tests/testpersistence.c: UTF-8 test

	* tests/testgconf.c: add a UTF-8 test

	* gconf/gconf.c: UTF-8 checks, and some indentation

	* gconf/gconf-schema.c: UTF-8 checks

	* gconf/gconf-value.c: add some UTF-8 robustness

2001-10-12  Havoc Pennington  <hp@redhat.com>

        Merging from stable.
	
	* backends/xml-entry.c (entry_unset_value): don't translate "%s"

	* backends/xml-cache.c (cache_sync_foreach): printf string screwup

	* backends/xml-backend.c (query_value): fix printf string derived
	from untrusted data
	(query_value): ditto

	* configure.in: ensure we find the right bdb headers, if we find
	the library, error if not. Reported by Samuel Stringham

	* gconf/gconf-internals.c (gconf_double_to_string): use g_snprintf
	not plain snprintf for Solaris 2.5.1 friendliness

	* doc/gconf/tmpl/gconf-value.sgml: fix docs to mention that pairs
	contain only primitive types; pointed out by Gregory Merchan

	* configure.in (BDB_CFLAGS): patch from Nils Philippsen to detect
	DB 3.1 if available.

2001-10-11  Havoc Pennington  <hp@redhat.com>

	* tests/testgconf.c (check_utils): add test for the key
	escaper/unescaper thingy

	* gconf/gconf.c (gconf_escape_key): new function