@@ -1,3 +1,9 @@
+2001-10-15  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/gconftool.c (main): don't create config daemon for
+	--get-default-source
+	(main): shut down daemon in makefile install mode
+
 2001-10-14  Ross Golder  <ross@golder.org>
 
 	* gconf.spec.in: updated installation paths
